examples/test/testpolicy16441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16441
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key40: value3
      key15: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
          key26: value43
      podSelector:
        matchLabels:
          key39: value43
          key20: value46
